--- a/application-layer/package.json
+++ b/application-layer/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "seed:products": "node ./scripts/seed-products.js",
+    "seed:about": "node ./scripts/seed-about.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
